--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/lab": "^1.0.24",
+    "@ngx-progressbar/core": "^3.0.2",
+    "@ngx-progressbar/http-client": "^3.0.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
+    "rxjs-compat": "^6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
   },
