--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngx-progressbar/http-client": "^3.0.2",
     "cordova-plugin-network-information": "2.0.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.11.0",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.5.1",
     "tslib": "^1.9.0",
