--- a/package.json
+++ b/package.json
@@ -13,45 +13,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.14",
-    "@angular/common": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/forms": "^7.2.2",
-    "@angular/http": "^7.2.2",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/router": "^7.2.2",
-    "@angular/service-worker": "^7.2.2",
-    "@ionic-native/core": "^5.0.0",
+    "@angular/animations": "^7.2.15",
+    "@angular/common": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "@angular/service-worker": "^7.2.15",
+    "@ionic-native/core": "^5.8.0",
     "@ionic-native/network": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.1.0",
+    "@ionic-native/splash-screen": "^5.8.0",
+    "@ionic-native/status-bar": "^5.8.0",
+    "@ionic/angular": "^4.5.0",
     "@ionic/lab": "^1.0.24",
     "@ngx-progressbar/core": "^3.0.2",
     "@ngx-progressbar/http-client": "^3.0.2",
     "cordova-plugin-network-information": "2.0.1",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.9",
     "firebase": "^5.11.0",
-    "rxjs": "~6.5.1",
-    "rxjs-compat": "^6.5.1",
-    "tslib": "^1.9.0",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
+    "tslib": "^1.10.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.13.8",
-    "@angular-devkit/build-angular": "~0.13.8",
-    "@angular-devkit/core": "~7.3.8",
-    "@angular-devkit/schematics": "~7.3.8",
-    "@angular/cli": "~7.3.8",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
-    "@angular/language-service": "~7.2.2",
+    "@angular-devkit/architect": "^0.13.9",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular-devkit/core": "^7.3.9",
+    "@angular-devkit/schematics": "^7.3.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler": "^7.2.15",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
     "@ionic/angular-toolkit": "~1.5.1",
-    "@types/node": "~10.14.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^10.14.9",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -61,7 +61,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
-    "ts-node": "~8.1.0",
+    "ts-node": "^8.1.1",
     "tslint": "~5.16.0",
     "typescript": "~3.1.6"
   },
