--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngx-progressbar/core": "^5.3.2",
     "@ngx-progressbar/http": "^5.3.2",
     "core-js": "^2.5.4",
+    "ng-lottie": "^0.3.2",
     "ngx-json-viewer": "^2.4.0",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.5.2",
